Updates and fixes (#463)
This PR aims majorly at resolving the following issues:

- [x] box-select not working wasn't working with the latest holoviews - fixed
- [x] update breaking changes to cuspatial api for point_in_polygon 
- [x] Gird layout issue when using `d.app()` - fixed by using panel.GridSpec instead of panel.GridStack(external library)
- [x] Using panel.ReactTemple instead of custom implementation - better to maintain, and reuse a better implementation
- [x] Update holoviews version dependency
- [x] Callback issue when running in web-app mode for bokeh charts, using `add_next_tick_callback` to resolve this

Tested all notebooks and dashboards locally with cudf and dask_cudf dataframes.
cc @exactlyallan

Authors:
  - Ajay Thorve (https://github.com/AjayThorve)

Approvers:
  - AJ Schmidt (https://github.com/ajschmidt8)
  - Allan (https://github.com/exactlyallan)

URL: https://github.com/rapidsai/cuxfilter/pull/463

--- a/python/cuxfilter/themes/assets/rapids-dark.css
+++ b/python/cuxfilter/themes/assets/rapids-dark.css
@@ -7,7 +7,7 @@ body {
   background-color: #2f2f2f;
 }
 
-.panel-df tbody tr:nth-child(odd){
+.panel-df tbody tr:nth-child(odd) {
   background-color: #000 !important;
 }
 
@@ -21,7 +21,8 @@ body {
   border-color: #292929 !important;
   background-color: #121212 !important;
 }
-.drag-handle, .react-resizable-handle {
+.drag-handle,
+.react-resizable-handle {
   filter: brightness(0) invert(1);
 }
 
@@ -30,7 +31,7 @@ body {
   background-color: #2f2f2f;
 }
 
-.bk-root .bk-input{
+.bk-root .bk-input {
   color: white;
   background-color: #2f2f2f;
 }
